_includes/manuals/1.15/4.3.8.2_freeipa_realm.md
The FreeIPA implementation of the realm proxy is able to add a host entry to FreeIPA, send the hostgroup name, and request a one-time registration password.

##### Configuration of FreeIPA

In order to create the realm user and keytab to authenticate to FreeIPA, you can use the included `foreman-prepare-realm` tool. Your Smart Proxy must be registered to the FreeIPA realm already, and have the ipa-admintools package installed.

Simply provide a user with admin rights in FreeIPA, and a target user to create.

<div class="alert alert-info">
Do not use 'foreman-proxy' as the username for this -- this is a local user used for running the Smart Proxy service.
</div>

    # foreman-prepare-realm admin realm-proxy
    Password for admin@EXAMPLE.COM:
    ---------------------------------------
    Added permission "modify host password"
    ---------------------------------------
      Permission name: modify host password
      Permissions: write
      Attributes: userpassword
      Type: host
    [...]
    Keytab successfully retrieved and stored in: freeipa.keytab
    Realm Proxy User:    realm-proxy
    Realm Proxy Keytab:  /root/freeipa.keytab

##### Configuration of Smart Proxy

Copy the freeipa.keytab created above to /etc/foreman-proxy/freeipa.keytab and set
the correct permissions:

        chown foreman-proxy /etc/foreman-proxy/freeipa.keytab
        chmod 600 /etc/foreman-proxy/freeipa.keytab

Then update realm.yml with the relevant settings.

If you're using FreeIPA to manage DNS records, and want them to be automatically deleted when the host is deleted in Foreman, set this to true:

    :freeipa_remove_dns: true

Finally, trust the IPA Certificate Authority. Ensure you have the most up-to-date version of the `ca-certificates` package installed.

    cp /etc/ipa/ca.crt /etc/pki/ca-trust/source/anchors/ipa.crt
    update-ca-trust enable
    update-ca-trust

You will need to disable the DNS proxy for hosts that are provisioned with a realm set, as FreeIPA adds the forward record for you. In order to support adding a reverse lookup record also, you will need to go into the settings for the forward lookup zone on the IPA server and tick `Allow PTR sync`. This will make sure that FreeIPA creates the PTR records for you.

##### Using Automember Rules

FreeIPA supports the ability to setup automember rules based on attributes of a system.  When using the FreeIPA proxy, the Foreman host group is available as a parameter in FreeIPA known as `userclass`.  Nested host groups are sent as displayed in the Foreman UI, e.g. "Parent/Child/Child".  Note that Foreman does send updates to FreeIPA, however automember rules are only applied at initial add.  This will be coming in a [future version of FreeIPA](https://fedorahosted.org/freeipa/ticket/3752).

First, we create a host group in FreeIPA:

    # ipa hostgroup-add webservers
    Description: web servers
    ----------------------------
    Added hostgroup "webservers"
    ----------------------------
      Host-group: webservers
      Description: web servers

Define an automember rule:

    # ipa automember-add --type=hostgroup webservers
    ----------------------------------
    Added automember rule "webservers"
    ----------------------------------
    Automember Rule: webservers

Create an automember condition based on the `userclass` attribute:

    # ipa automember-add-condition --key=userclass --type=hostgroup --inclusive-regex=^webserver webservers
    ----------------------------------
    Added condition(s) to "webservers"
    ----------------------------------
      Automember Rule: webservers
      Inclusive Regex: userclass=^webserver
    ----------------------------
    Number of conditions added 1
    ----------------------------

When a machine in Foreman is in the "webservers" host group, it will automatically be added to the FreeIPA
"webservers" host group as well.  FreeIPA host groups allow for Host-based access controls (HBAC), sudo policies,
etc.
